Expand site with repo's README, installation instructions, and minima theme

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 ---
-layout: default
-title: LQ • LabVIEW bindings for the Qt toolkit
+layout: home
+title: LQ
 ---
 <div>
-	<h1>Introduction</h1>
 	<p>LQ (pronounced "Luke") is a set of <a href="https://www.ni.com/labview/">LabVIEW</a>
-	bindings for the <a href="https://www.qt.io/">Qt toolkit</a>.</p>
+	bindings for the <a href="https://www.qt.io/">Qt toolkit</a>. It lets LabVIEW programmers
+	create dynamic, flexible, and powerful GUIs.</p>
 
-	<p>It is currently focussed on the widget classes, but other major technologies from Qt
+	<p>LQ is currently focussed on the widget classes, but other major technologies from Qt
 	are planned for inclusion in future releases.</p>
 </div>
 <div>
 	<h1>Examples</h1>
+	<p>Here is a video compilation of some examples:</p>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/YChRI1cMfiI" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
