Update info about platforms, dependencies, and versions
Also update build script names

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ title: LQ
 
 	<p>LQ is currently focussed on the widget classes, but other major technologies from Qt
 	are planned for inclusion in future releases.</p>
+	
+	<p>As of v0.3.0, the supported platforms are:</p>
+	<ul>
+		<li>Windows 7 and newer (32-bit and 64-bit)</li>
+		<li>NI Linux RT devices with Embedded UI (64-bit)</li>
+	</ul>
 </div>
 <div>
 	<h1>Examples</h1>
