Link to Qt Widgets docs

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: LQ
 	bindings for the <a href="https://www.qt.io/">Qt toolkit</a>. It lets LabVIEW programmers
 	create dynamic, flexible, and powerful GUIs.</p>
 
-	<p>LQ is currently focussed on the widget classes, but other major technologies from Qt
-	are planned for inclusion in future releases.</p>
+	<p>LQ is currently focussed on the <a href="https://doc.qt.io/qt-5/qtwidgets-index.html">widget classes</a>,
+	but other major technologies from Qt are planned for inclusion in future releases.</p>
 	
 	<p>As of v0.3.0, the supported platforms are:</p>
 	<ul>
